--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tributejs",
-  "version": "5.1.3",
-  "description": "Native ES6 @mentions",
+  "name": "tributejs-withautocompleteseparator",
+  "version": "5.2.0",
+  "description": "Native ES6 @mentions and autocomplete",
   "main": "dist/tribute.js",
   "module": "dist/tribute.esm.js",
   "browser": "dist/tribute.min.js",
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/zurb/tribute.git"
+    "url": "git://github.com/rajatkantinandi/tribute.git"
   },
   "scripts": {
     "build": "rollup -c",
@@ -43,7 +43,6 @@
     "test": "karma start test/karma.conf.js",
     "test-single-run": "karma start test/karma.conf.js --single-run --browsers ChromeHeadless"
   },
-  "author": "Jordan Humphreys <jordan@zurb.com>",
   "license": "MIT",
   "dependencies": {}
 }
